--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+div{
+    width: 200px;
+    height: 200px;
+    background-color: blueviolet;
+}
